// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Nav render Nav with overrides correctly 1`] = `
<div
  class=
      ms-FocusZone
      &:focus {
        outline: none;
      }
  data-focuszone-id="FocusZone4"
  data-tabster="{\\"uncontrolled\\": {}}"
>
  <nav
    class=
        ms-Nav
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          -webkit-overflow-scrolling: touch;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          overflow-y: auto;
          user-select: none;
        }
    role="navigation"
  >
    <div
      class="ms-Nav-group is-expanded"
    >
      <div
        data-test="header-override"
      >
        <button
          aria-expanded="true"
          class=
              ms-Nav-chevronButton
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: transparent;
                border-bottom: 1px solid #edebe9;
                border: none;
                color: #323130;
                cursor: pointer;
                display: block;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 18px;
                font-weight: 400;
                height: 44px;
                line-height: 44px;
                margin-bottom: 5px;
                margin-left: 0;
                margin-right: 0;
                margin-top: 5px;
                outline: transparent;
                overflow: hidden;
                padding-bottom: 0px,;
                padding-left: 28px;
                padding-right: 20px,;
                padding-top: 0px,;
                position: relative;
                text-align: left;
                text-overflow: ellipsis;
                white-space: nowrap;
                width: 100%;
              }
              &::-moz-focus-inner {
                border: 0;
              }
              .ms-Fabric--isFocusVisible &:focus:after {
                border: 1px solid #ffffff;
                bottom: 1px;
                content: "";
                left: 1px;
                outline: 1px solid #605e5c;
                position: absolute;
                right: 1px;
                top: 1px;
                z-index: 1;
              }
              :host(.ms-Fabric--isFocusVisible) &:focus:after {
                border: 1px solid #ffffff;
                bottom: 1px;
                content: "";
                left: 1px;
                outline: 1px solid #605e5c;
                position: absolute;
                right: 1px;
                top: 1px;
                z-index: 1;
              }
              &:visited {
                color: #323130;
              }
          tabindex="0"
        >
          <i
            aria-hidden="true"
            class=
                ms-Nav-chevron
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  align-items: center;
                  display: inline-flex;
                  font-family: "FabricMDL2Icons";
                  font-size: 12px;
                  font-style: normal;
                  font-weight: normal;
                  height: 44px;
                  left: 8px;
                  line-height: 44px;
                  position: absolute;
                  speak: none;
                  text-decoration: inherit;
                  transform: rotate(-180deg);
                  transition: transform .1s linear;
                }
            data-icon-name="ChevronDown"
          >
            
          </i>
          Group
        </button>
      </div>
      <div
        class=
            ms-Nav-groupContent
            {
              animation-duration: 0.367s;
              animation-fill-mode: both;
              animation-name: keyframes from{opacity:0;}to{opacity:1;} keyframes from{transform:translate3d(0,-20px,0);pointer-events:none;}to{transform:translate3d(0,0,0);pointer-events:auto;};
              animation-timing-function: cubic-bezier(.1,.9,.2,1);
              display: block;
              margin-bottom: 40px;
            }
      >
        <ul
          class=
              ms-Nav-navItems
              {
                list-style-type: none;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                padding-bottom: 0px;
                padding-left: 0px;
                padding-right: 0px;
                padding-top: 0px;
              }
          role="list"
        >
          <li
            class=
                ms-Nav-navItem
                {
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                }
            role="listitem"
          >
            <div
              class=
                  ms-Nav-compositeLink
                  {
                    color: #323130;
                    display: block;
                    position: relative;
                  }
              name="Bing"
            >
              <div
                data-test="button-override"
              >
                <a
                  class=
                      ms-Button
                      ms-Button--action
                      ms-Button--command
                      ms-Nav-link
                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        align-items: center;
                        background-color: transparent;
                        border-radius: 2px;
                        border: 1px solid transparent;
                        box-sizing: border-box;
                        color: #323130;
                        cursor: pointer;
                        display: block;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 14px;
                        font-weight: 400;
                        height: 44px;
                        justify-content: center;
                        line-height: 44px;
                        outline: transparent;
                        overflow: hidden;
                        padding-bottom: 0;
                        padding-left: 27px;
                        padding-right: 20px;
                        padding-top: 0;
                        position: relative;
                        text-align: center;
                        text-decoration: none;
                        text-overflow: ellipsis;
                        user-select: none;
                        white-space: nowrap;
                        width: 100%;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid #ffffff;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                        bottom: -2px;
                        left: -2px;
                        outline-color: ButtonText;
                        right: -2px;
                        top: -2px;
                      }
                      :host(.ms-Fabric--isFocusVisible) &:focus:after {
                        border: 1px solid #ffffff;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                        bottom: -2px;
                        left: -2px;
                        outline-color: ButtonText;
                        right: -2px;
                        top: -2px;
                      }
                      &:active > span {
                        left: 0px;
                        position: relative;
                        top: 0px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        border-color: Window;
                        border: 0px;
                      }
                      &:hover {
                        color: #0078d4;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                        color: Highlight;
                      }
                      &:hover .ms-Button-icon {
                        color: #0078d4;
                      }
                      &:active {
                        color: #000000;
                      }
                      &:active .ms-Button-icon {
                        color: #004578;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus {
                        border: 1px solid WindowText;
                      }
                      .ms-Nav-compositeLink:hover & {
                        background-color: #f3f2f1;
                      }
                  data-is-focusable="true"
                  href="http://localhost/#/testing1"
                  tabindex="-1"
                  title="Bing"
                >
                  <span
                    class=
                        ms-Button-flexContainer
                        {
                          align-items: center;
                          display: flex;
                          flex-wrap: nowrap;
                          height: 100%;
                          justify-content: flex-start;
                        }
                    data-automationid="splitbuttonprimary"
                  >
                    <div
                      data-test="link-override"
                    >
                      <div
                        class=
                            ms-Nav-linkText
                            {
                              margin-bottom: 0;
                              margin-left: 4px;
                              margin-right: 4px;
                              margin-top: 0;
                              overflow: hidden;
                              text-align: left;
                              text-overflow: ellipsis;
                              vertical-align: middle;
                            }
                      >
                        Bing
                      </div>
                    </div>
                  </span>
                </a>
              </div>
            </div>
          </li>
          <li
            class=
                ms-Nav-navItem
                {
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                }
            role="listitem"
          >
            <div
              class=
                  ms-Nav-compositeLink
                  {
                    color: #323130;
                    display: block;
                    position: relative;
                  }
              name="OneDrive"
            >
              <div
                data-test="button-override"
              >
                <a
                  class=
                      ms-Button
                      ms-Button--action
                      ms-Button--command
                      ms-Nav-link
                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        align-items: center;
                        background-color: transparent;
                        border-radius: 2px;
                        border: 1px solid transparent;
                        box-sizing: border-box;
                        color: #323130;
                        cursor: pointer;
                        display: block;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 14px;
                        font-weight: 400;
                        height: 44px;
                        justify-content: center;
                        line-height: 44px;
                        outline: transparent;
                        overflow: hidden;
                        padding-bottom: 0;
                        padding-left: 27px;
                        padding-right: 20px;
                        padding-top: 0;
                        position: relative;
                        text-align: center;
                        text-decoration: none;
                        text-overflow: ellipsis;
                        user-select: none;
                        white-space: nowrap;
                        width: 100%;
                      }
                      &::-moz-focus-inner {
                        border: 0;
                      }
                      .ms-Fabric--isFocusVisible &:focus:after {
                        border: 1px solid #ffffff;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                        bottom: -2px;
                        left: -2px;
                        outline-color: ButtonText;
                        right: -2px;
                        top: -2px;
                      }
                      :host(.ms-Fabric--isFocusVisible) &:focus:after {
                        border: 1px solid #ffffff;
                        bottom: 1px;
                        content: "";
                        left: 1px;
                        outline: 1px solid #605e5c;
                        position: absolute;
                        right: 1px;
                        top: 1px;
                        z-index: 1;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                        bottom: -2px;
                        left: -2px;
                        outline-color: ButtonText;
                        right: -2px;
                        top: -2px;
                      }
                      &:active > span {
                        left: 0px;
                        position: relative;
                        top: 0px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        border-color: Window;
                        border: 0px;
                      }
                      &:hover {
                        color: #0078d4;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                        color: Highlight;
                      }
                      &:hover .ms-Button-icon {
                        color: #0078d4;
                      }
                      &:active {
                        color: #000000;
                      }
                      &:active .ms-Button-icon {
                        color: #004578;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus {
                        border: 1px solid WindowText;
                      }
                      .ms-Nav-compositeLink:hover & {
                        background-color: #f3f2f1;
                      }
                  data-is-focusable="true"
                  href="http://localhost/#/testing2"
                  tabindex="-1"
                  title="OneDrive"
                >
                  <span
                    class=
                        ms-Button-flexContainer
                        {
                          align-items: center;
                          display: flex;
                          flex-wrap: nowrap;
                          height: 100%;
                          justify-content: flex-start;
                        }
                    data-automationid="splitbuttonprimary"
                  >
                    <div
                      data-test="link-override"
                    >
                      <div
                        class=
                            ms-Nav-linkText
                            {
                              margin-bottom: 0;
                              margin-left: 4px;
                              margin-right: 4px;
                              margin-top: 0;
                              overflow: hidden;
                              text-align: left;
                              text-overflow: ellipsis;
                              vertical-align: middle;
                            }
                      >
                        OneDrive
                      </div>
                    </div>
                  </span>
                </a>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Nav renders Nav correctly 1`] = `
<div
  class=
      ms-FocusZone
      &:focus {
        outline: none;
      }
  data-focuszone-id="FocusZone0"
  data-tabster="{\\"uncontrolled\\": {}}"
>
  <nav
    class=
        ms-Nav
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          -webkit-overflow-scrolling: touch;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          overflow-y: auto;
          user-select: none;
        }
    role="navigation"
  >
    <div
      class="ms-Nav-group is-expanded"
    >
      <div
        class=
            ms-Nav-groupContent
            {
              animation-duration: 0.367s;
              animation-fill-mode: both;
              animation-name: keyframes from{opacity:0;}to{opacity:1;} keyframes from{transform:translate3d(0,-20px,0);pointer-events:none;}to{transform:translate3d(0,0,0);pointer-events:auto;};
              animation-timing-function: cubic-bezier(.1,.9,.2,1);
              display: block;
              margin-bottom: 40px;
            }
      >
        <ul
          class=
              ms-Nav-navItems
              {
                list-style-type: none;
                margin-bottom: 0px;
                margin-left: 0px;
                margin-right: 0px;
                margin-top: 0px;
                padding-bottom: 0px;
                padding-left: 0px;
                padding-right: 0px;
                padding-top: 0px;
              }
          role="list"
        >
          <li
            class=
                ms-Nav-navItem
                {
                  padding-bottom: 0px;
                  padding-left: 0px;
                  padding-right: 0px;
                  padding-top: 0px;
                }
            role="listitem"
          >
            <div
              class=
                  ms-Nav-compositeLink
                  {
                    color: #323130;
                    display: block;
                    position: relative;
                  }
              name=""
            >
              <button
                class=
                    ms-Button
                    ms-Button--action
                    ms-Button--command
                    ms-Nav-link
                    {
                      -moz-osx-font-smoothing: grayscale;
                      -webkit-font-smoothing: antialiased;
                      align-items: center;
                      background-color: transparent;
                      border-radius: 2px;
                      border: 1px solid transparent;
                      box-sizing: border-box;
                      color: #323130;
                      cursor: pointer;
                      display: block;
                      font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                      font-size: 14px;
                      font-weight: 400;
                      height: 44px;
                      justify-content: center;
                      line-height: 44px;
                      outline: transparent;
                      overflow: hidden;
                      padding-bottom: 0;
                      padding-left: 27px;
                      padding-right: 20px;
                      padding-top: 0;
                      position: relative;
                      text-align: center;
                      text-decoration: none;
                      text-overflow: ellipsis;
                      user-select: none;
                      white-space: nowrap;
                      width: 100%;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      bottom: -2px;
                      left: -2px;
                      outline-color: ButtonText;
                      right: -2px;
                      top: -2px;
                    }
                    :host(.ms-Fabric--isFocusVisible) &:focus:after {
                      border: 1px solid #ffffff;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                      bottom: -2px;
                      left: -2px;
                      outline-color: ButtonText;
                      right: -2px;
                      top: -2px;
                    }
                    &:active > span {
                      left: 0px;
                      position: relative;
                      top: 0px;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                      border-color: Window;
                      border: 0px;
                    }
                    &:hover {
                      color: #0078d4;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
                      color: Highlight;
                    }
                    &:hover .ms-Button-icon {
                      color: #0078d4;
                    }
                    &:active {
                      color: #000000;
                    }
                    &:active .ms-Button-icon {
                      color: #004578;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:focus {
                      border: 1px solid WindowText;
                    }
                    .ms-Nav-compositeLink:hover & {
                      background-color: #f3f2f1;
                    }
                data-is-focusable="true"
                tabindex="0"
                title=""
                type="button"
              >
                <span
                  class=
                      ms-Button-flexContainer
                      {
                        align-items: center;
                        display: flex;
                        flex-wrap: nowrap;
                        height: 100%;
                        justify-content: flex-start;
                      }
                  data-automationid="splitbuttonprimary"
                >
                  <div
                    class=
                        ms-Nav-linkText
                        {
                          margin-bottom: 0;
                          margin-left: 4px;
                          margin-right: 4px;
                          margin-top: 0;
                          overflow: hidden;
                          text-align: left;
                          text-overflow: ellipsis;
                          vertical-align: middle;
                        }
                  />
                </span>
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;
